<resources>
    <string name="app_name">StudyLab</string>
    <string name="app_login_label">Вход в учетную запись</string>
    <string name="login">Логин</string>
    <string name="account_name">Имя пользователя (или e-mail)</string>
    <string name="password">Пароль</string>
    <string name="LogInSystem">Войти</string>
    <string name="hasntAcc">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_process">Регистрация</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="email">E-mail</string>
    <string name="Name">Имя</string>
    <string name="Surname">Фамилия</string>
    <string name="LastName">Отчество</string>
    <string name="title_activity_courses_view">CoursesViewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Courses</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_raiting">Ваш рейтинг:</string>
    <string name="your_courses">Ваши курсы:</string>
</resources>