<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_black"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:paddingLeft="50px"
                android:visibility="visible"
                app:srcCompat="@drawable/avatar"
                tools:src="@drawable/avatar"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="232dp"
                android:layout_height="155dp"
                android:orientation="vertical"
                android:paddingLeft="20px"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/__login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:text="@string/email"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/__email_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:text="@string/Name"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/__name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:text="@string/Surname"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/__surname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/averia_libre"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_raiting" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_courses" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>