<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="702dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/framestudylablogo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/averia_libre"
            android:text="@string/app_login_label"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="347dp"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:paddingLeft="120px">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:paddingTop="40px"
                android:paddingRight="20px"
                app:srcCompat="@drawable/usericon" />

            <EditText
                android:id="@+id/__edit_login"
                android:layout_width="259dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/averia_libre"
                android:hint="@string/login"
                android:inputType="text"
                android:maxLength="20"
                android:paddingHorizontal="30px"
                android:paddingLeft="30px"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textScaleX="1"
                android:textSize="18sp"
                android:transformPivotY="10px" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="57dp"
            android:orientation="horizontal"
            android:paddingLeft="120px">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:paddingTop="30px"
                android:paddingRight="20px"
                app:srcCompat="@drawable/iconblock" />

            <EditText
                android:id="@+id/__edit_password"
                android:layout_width="259dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:fontFamily="@font/averia_libre"
                android:hint="@string/password"
                android:inputType="text"
                android:maxLength="36"
                android:paddingHorizontal="30px"
                android:paddingLeft="30px"
                android:password="true"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textScaleX="1"
                android:textSize="18sp"
                android:transformPivotY="10px" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <Button
                android:id="@+id/__button_login"
                android:layout_width="275dp"
                android:layout_height="67dp"
                android:fontFamily="@font/averia_libre"
                android:text="@string/LogInSystem"
                android:textSize="24sp"
                app:cornerRadius="15dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <Button
                android:id="@+id/__button_register"
                android:layout_width="275dp"
                android:layout_height="67dp"
                android:fontFamily="@font/averia_libre"
                android:text="@string/register"
                android:textSize="22sp"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>